--- a/Emission Omission V4 (210125)/src/tabelle.html
+++ b/Emission Omission V4 (210125)/src/tabelle.html
@@ -8,6 +8,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet" />
     <link rel="stylesheet" href="../src/css/styles.css" />
     <link
       rel="icon"
@@ -21,29 +24,26 @@
     <title>Emissionstabelle</title>
   </head>
   <body>
-    <div class="behälter">
-      <div class="header-navigation">
-        <a href=""
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="dark-mode-icon">
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-          </svg>
-        </a>
-        <a href="index.html">Startseite</a>
-        <a href="faq.html">FAQ</a>
-        <a href="über-uns.html">Über Uns</a>
-        <a href="kontakt.html">Kontakt</a>
+    <div class="container">
+      <div class="row justify-content-between align-items-center py-3">
+        <div class="col-auto">
+          <nav>
+            <a href="index.html" class="mx-3 text-decoration-none"
+              >Startseite</a
+            >
+            <a href="faq.html" class="mx-3 text-decoration-none">FAQ</a>
+            <a href="über-uns.html" class="mx-3 text-decoration-none"
+              >Über Uns</a
+            >
+            <a href="kontakt.html" class="mx-3 text-decoration-none">Kontakt</a>
+          </nav>
+        </div>
       </div>
+
       <header class="table-header">
-        <h2>Übersicht der CO₂-Emissionen nach Unternehmen und Branchen</h2>
+        <h2 class="text-center">
+          Übersicht der CO₂-Emissionen nach Unternehmen und Branchen
+        </h2>
       </header>
       <input
         type="text"
@@ -51,7 +51,7 @@
         onkeyup="filterFunction()"
         placeholder=" Nach Land oder Unternehmen filtern" />
       <button id="btn-sort" onclick="sortTable()">Sortieren</button>
-      <table id="emissionsTable">
+      <table id="emissionsTable" class="table">
         <thead>
           <tr>
             <th data-index="0">Land</th>
@@ -218,11 +218,19 @@
           </tr>
         </tbody>
       </table>
-      <p>*Emissionsangaben in <mark>Millionen Tonnen</mark></p>
-      <div class="footer-navigation">
-        <a href="impressum.html">Impressum</a>
-        <a href="">Datenschutz</a>
-      </div>
+      <p class="mt-4">*Emissionsangaben in <mark>Millionen Tonnen</mark></p>
+      <footer class="bg-dark text-white py-3 mt-5">
+        <div class="container text-center">
+          <a href="impressum.html" class="mx-3 text-decoration-none text-white"
+            >Impressum</a
+          >
+          <a
+            href="datenschutz.html"
+            class="mx-3 text-decoration-none text-white"
+            >Datenschutz</a
+          >
+        </div>
+      </footer>
     </div>
     <script src="script.js" defer></script>
   </body>
